fix: fixed мodals & menu y-srcroll on mobilen

--- a/css/style.css
+++ b/css/style.css
@@ -439,6 +439,7 @@ template {
 }
 
 .navbar-bottom {
+  overflow-y: auto;
   background-color: #0A223D;
 }
 
@@ -1797,6 +1798,8 @@ template {
   top: 50%;
   left: 50%;
   max-width: 478px;
+  max-height: 100%;
+  overflow-y: auto;
   padding: 33px 88px;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
